--- a/settings/application.properties
+++ b/settings/application.properties
@@ -1,7 +1,7 @@
-jodconverter.local.port-numbers:2002,2003,2004,2005,2006
-jodconverter.local.task-queue-timeout:999999
-jodconverter.local.task-execution-timeout:99999999999999
-jodconverter.local.working-dir:/tmp
-spring.servlet.multipart.max-file-size:5MB
-spring.servlet.multipart.max-request-size:5MB
+jodconverter.local.port-numbers=2002,2003,2004,2005,2006
+jodconverter.local.task-queue-timeout=999999
+jodconverter.local.task-execution-timeout=999999
+jodconverter.local.working-dir=/tmp
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
 server.port=8090
